function(ADD_MROCCLUSION_TOOL TOOL_NAME)
	if(WIN32)
		add_executable(${TOOL_NAME} "${TOOL_NAME}.cpp")
	else()
		add_executable(${TOOL_NAME} "${TOOL_NAME}.cpp")
	endif()
	target_link_libraries(${TOOL_NAME} ${MROCCLUSION_EXEC_LIBRARIES})
	set_target_properties(${TOOL_NAME} PROPERTIES FOLDER Tools)
endfunction()

ADD_MROCCLUSION_TOOL(CompareOcclusionMethods)
ADD_MROCCLUSION_TOOL(CompareOcclusionMethodsInfinitam)
ADD_MROCCLUSION_TOOL(RecordOcclusionMethodFootage)
ADD_MROCCLUSION_TOOL(OcclusionMethodsLive)
ADD_MROCCLUSION_TOOL(CvfGpuLive)
ADD_MROCCLUSION_TOOL(OcclusionInfinitamLive)
